# human-segmentation

./: .gitignore  README.md
FixDepthImages/: CMakeLists.txt  main.cpp
FixDepthImages/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
FixDepthImages/nbproject/private/: private.xml
blender_scripts_render_plys/: blender_scripts.py  blender_scripts_new.py
blender_scripts_render_plys/input_files/: camera_focal_length.txt  camera_focal_length_scaled_down_mod.txt  camera_positions.txt  camera_positions_scaled_down_mod.txt  camera_properties.txt  camera_properties_2.txt  pose_parameters.txt
color_all_registered_meshes/: CMakeLists.txt  example.cpp
segmentation_python/: build_net.py  conv_defs.py  data_checker  data_utils.py  data_utils_png_encoded.py  evaluation.py  evaluation_raw_data.py  freeze_prediction_graph.py  initialize.py  launcher.py  net_layer_upsampling.py  net_main.py  net_mobilenet_v1.py  networks.py  prediction_raw_data.py  requirements.txt  segmentation_parameters  test_gpu.py  test_python.py  test_slim.py  test_tf_profiler.py  training.py  training_raw_data.py  utils.py  validation.py
segmentation_python/SaveFiles/: Graph.pb  InputGraph.pb
segmentation_python/model_compare/: batch_1_ConvDef_6_Multideconv_3_Followups_1_Sepconvs_True_depthsep_inter_norm_activn_True_MobDepthMul_1.json  validation.txt
segmentation_python/model_compare/profile_eval/: _ConvDef_5_Multideconv_1_Followups_2_Sepconvs_False_MobDepthMul_1  (+7 more)
(+98 files in other folders)
